tdf#117261 xmloff: ODF import: convert form:connection-resource URL

... to absolute on import.

(regression from fbb3b60cdb7a22595eec80232bb3ccd83781cf00)

Change-Id: I2cd046e44489da86d3d67ff5df6cbad13e8265d0
Reviewed-on: https://gerrit.libreoffice.org/57076
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
Tested-by: Jenkins
(cherry picked from commit 510209df4bcf457cac819e75889d564d620f119d)
Reviewed-on: https://gerrit.libreoffice.org/57093
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 2bd85bfd98203cc11e2391e01e9f8d70a9037214)